using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class MagicString 
{
 
}

public class AnimatorParameter
{
    public const string AnimDecision = "AnimDecision";
    public const string IsMove = "IsMove";
    public const string Speed = "Speed";
    public const string IsCrashed = "IsCrashed";
    public const string QuickIdleTrigger = "QuickIdleTrigger";
}

public class AnimationName
{
    public const string CrashReact = "CrashReact";
    public const string FinishText = "FinishText";
}

public class MenuName
{
    public const string StartMenu = "StartMenu";
    public const string InGameGeneralUI = "InGameGeneralUI";
}

public class Layer
{
    public const string Wall = "Wall";
    public const string Player = "Player";
    
}
